Version 16.64 - 27 February 2015

- partitioning:
  o add missing button icons (mga#15264)

Version 16.63 - 27 February 2015

- partitioning:
  o fix too wide buttons (mga#12422, mga#13471, mga#14839, mga#15379)

Version 16.62 - 19 February 2015

- partitioning (mga#12422, mga#11988, mga#14839, mga#15272, mga#15264):
  o use an horizontal scrolling bar when needed
  o use a vertical scrolling bar when needed (mga#15272)
  o workaround too wide togglebuttons with empty label with gtk+3 and/or Adwaita

Version 16.61 - 18 February 2015

- ensure we install radeon-firmware too if needed (mga#15203)

Version 16.60 - 18 February 2015

- ensure we install kernel-firmware-nonfree if needed (mga#15203)

Version 16.59 - 18 February 2015

- bug:
  o display a nicer message when no removable medium is found (mga#14435)

Version 16.57 - 11 February 2015

- fix taking screenshots on UEFI 24bit bpp framebuffer (mga#13684)

Version 16.55 - 9 February 2015

- drakclock: Ensure that /etc/localtime is a symlink (mga#14888)
- users: Make sure to restart accounts-daemon after adding users (mga#15113)
- finish-install: Ensure i18n settings are loaded
- Create a symlink instead a hard copy to localtime see issue #14888
- i18n: Write the desired console font to /etc/vconsole.conf
- i18n: Use the x-distro /etc/locale.conf file instead of /etc/sysconfig/i18n
- drakedm: Don't run ancient dm init script (which no longer exists)
- Update traslations
- switch from oxygen-gtk to Adwaita theme
  o remove oxygen-gtk
  o add missing icons (mga#13673, mga#14355, mga#14840, mga#14844)
  o add libpixbufloader-svg.so for Adwaita svg icons
  o add gtk.css

Version 16.52 - 5 February 2015

- default to GPT on disks larger than 4TB, not LVM
- fix GPT initialization on empty disk
- fix failure to delete partitions after switching to GPT
- fix stage2 loading graphical installer in efi mode

Version 16.51 - 3 February 2015

- recognize new kernel-3.19 drivers

Version 16.50 - 9 January 2015
