@@ -30,8 +30,25 @@
 <!-- when adding udev rules, think whether they're needed in rescue too
      (../../../rescue/list.xml) -->
 <from dir="/lib/udev/rules.d">
-  70-wacom.rules
+  10-dm.rules
+  11-dm-lvm.rules
+  13-dm-disk.rules
+  50-udev-default.rules <!-- needed for input in X11 -->
+  60-keyboard.rules
+  60-persistent-input.rules
+  60-persistent-storage.rules
+  61-x11-input.rules
+  63-md-raid-arrays.rules
+  64-md-raid-assembly.rules
+
+  65-wacom.rules
   69-xorg-vmmouse.rules
+  70-touchpad-quirks.rules
+  71-synaptics.rules
+  75-net-description.rules
+  80-drivers.rules
+  80-net-setup-link.rules
+  95-dm-notify.rules
 </from>
 
 <from dir="/usr/LIB/girepository-1.0">
