@@ -1,3 +1,5 @@
+- include udev rule for Synaptics
+
 Version 16.64 - 27 February 2015
 
 - partitioning:
